[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral_clustering"
version = "0.0.1"
description = "A Python package to perform segmentation of 3D plant point clouds."
readme = "README.md"
license = { text = "cecill-c" }
authors = [
    { name = "Katia Mirande", email = "katia.mirande@inria.fr" }
]
maintainers = [
    { name = "Jonathan Legrand", email = "jonathan.legrand@ens-lyon.fr" },
]
requires-python = ">=3.8"
dependencies = [
    "click",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "open3d",
    "ortools",
    "scikit-learn",
    "scipy",
    "yellowbrick",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

[project.urls]
Homepage = "https://docs.romi-project.eu/plant_imager/"
Documentation = "https://romi.github.io/spectral-clustering/"
Repository = "https://github.com/romi/spectral-clustering"
Issues = "https://github.com/romi/spectral-clustering/issues"

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "markdown-exec[ansi]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
